Added tests for bb.c and attack.c

--- a/src/makefile
+++ b/src/makefile
@@ -1,4 +1,5 @@
 TARGET = main
+TESTS = tests
 LIBS = -lm
 CC = gcc
 CFLAGS = -g -Wall
@@ -6,6 +7,7 @@ CFLAGS = -g -Wall
 .PHONY: default all clean
 
 default: $(TARGET)
+tests: $(TESTS)
 all: default
 
 OBJECTS = $(patsubst %.c, %.o, $(wildcard *.c))
@@ -17,6 +19,9 @@ HEADERS = $(wildcard *.h)
 .PRECIOUS: $(TARGET) $(OBJECTS)
 
 $(TARGET): $(OBJECTS)
+	$(CC) $(OBJECTS) -Wall $(LIBS) -o $@
+
+$(TESTS): $(OBJECTS)
 	$(CC) $(OBJECTS) -Wall $(LIBS) -o $@
 
 clean:
